--- a/payever-calendar/src/app/calendar/calendar.component.scss
+++ b/payever-calendar/src/app/calendar/calendar.component.scss
@@ -36,3 +36,7 @@
   .appointments-list.cdk-drop-list-dragging .appointment-card:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+
+  :host /deep/ .mat-card-header-text {
+    margin: 0;
+}
