--- a/payever-calendar/src/app/appointment/appointment.component.html
+++ b/payever-calendar/src/app/appointment/appointment.component.html
@@ -1,8 +1,3 @@
-<mat-card-header>
-    <mat-card-title>{{ appointment.title }}</mat-card-title>
-    <mat-card-subtitle>{{ appointment.date | date }}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-actions>
-    <button mat-button color="warn" (click)="onDelete()">Delete</button>
-  </mat-card-actions>
-</mat-card>
+    <h1>{{ appointment.title }}</h1>
+    <h2>{{ appointment.date  }}</h2>
+    <button color="warn" (click)="onDelete()">Delete</button>
