Update minor errors

--- a/payever-calendar/src/app/app.component.html
+++ b/payever-calendar/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-  <span>Payever cal</span>
+  <span><h1>Payever calendar</h1></span>
 </mat-toolbar>
 <router-outlet></router-outlet>
